--- a/config.yaml
+++ b/config.yaml
@@ -6,84 +6,112 @@ architecture:
   stride: [1, 2]
   padding: [0, 1]
   use_batch_norm: [true, false]
-  use_layer_norm: [true, false]
   use_group_norm: [true, false]
   use_instance_norm: [true, false]
-  min_max_scaling: [true, false]
-  activation: ['relu', 'leaky_relu', 'prelu', 'gelu', 'swish']
-  weight_initialization: ['xavier', 'kaiming', 'normal', 'uniform']
+  use_min_max_scaling: [true, false]
+  activation_conv: ["relu", "leaky_relu", "prelu", "gelu", "swish"]
+  weight_initialization: ["xavier", "kaiming", "normal", "uniform"]
   freeze_layers: [true, false]
-
-fully_connected:
-  hidden_layers:
+  fully_connected_layers:
     - [256, 128]
     - [512, 256, 128]
-  activation: ['relu', 'tanh', 'prelu', 'gelu', 'swish']
+  activation_fc: ["relu", "tanh", "prelu", "gelu", "swish"]
 
 training:
-  learning_rate:
-    min: 0.0001
-    max: 0.01
-  momentum:
-    min: 0.0
-    max: 0.99
-  weight_decay_on_bias: [true, false]
+  shuffle: [true, false]
   gradient_clipping:
     min: 0.1
     max: 10.0
-  optimizer: ['adam', 'sgd', 'rmsprop']
-  epochs: [10, 20, 30, 40]
-  scheduler: ['constant', 'step', 'exponential']
-  decay_factor:
-    min: 0.1
-    max: 0.9
-  warmup_steps: [0, 100, 500]
   early_stopping:
     enabled: [true, false]
     patience: [5, 10, 15]
-  shuffle: [true, false]
+
+  optimizer:
+    type: ["adam", "sgd", "rmsprop"]
+    learning_rate:
+      min: 0.0001
+      max: 0.01
+    momentum:
+      min: 0.0
+      max: 0.99
+    weight_decay:
+      min: 0.00001
+      max: 0.001
+    weight_decay_on_bias: [true, false]
+
+  scheduler:
+    type: ["step", "reduce_on_plateau", "cosine"]
+    lr_decay_factor:
+      min: 0.1
+      max: 0.9
+    step_size: [3, 5, 8]
+
+  loss_function:
+    type: ["cross_entropy", "focal", "dice", "tversky", "combined"]
+    gamma:
+      min: 1.0
+      max: 5.0
+    alpha:
+      min: 0.25
+      max: 1.0
 
 regularization:
-  use_l1: [true, false]
-  l1_strength:
-    min: 0.00001
-    max: 0.001
-  use_l2: [true, false]
-  l2_strength:
-    min: 0.00001
-    max: 0.001
-  use_dropout: [true, false]
-  dropout_rate:
-    min: 0.1
-    max: 0.5
-  dropout_position: ['after_conv', 'after_activation', 'after_fc']
-  use_dropconnect: [true, false]
-  dropconnect_rate:
-    min: 0.1
-    max: 0.5
+  l1:
+    enabled: [true, false]
+    strength:
+      min: 0.00001
+      max: 0.001
+  l2:
+    enabled: [true, false]
+    strength:
+      min: 0.00001
+      max: 0.001
+  dropout:
+    enabled: [true, false]
+    position: ["after_conv", "after_activation", "after_fc"]
+    rate:
+      min: 0.1
+      max: 0.5
+  dropconnect:
+    enabled: [true, false]
+    rate:
+      min: 0.1
+      max: 0.5
 
 augmentation:
-  use_brightness: [true, false]
   brightness:
+    enabled: [true, false]
     min: 0
     max: 0.5
-  use_contrast: [true, false]
   contrast:
+    enabled: [true, false]
     min: 0
     max: 0.5
-  use_flip: [true, false]
   flip:
-    min: 0
-    max: 1.0
-  use_crop: [true, false]
+    enabled: [true, false]
+    prob:
+      min: 0
+      max: 1.0
   crop:
-    min: 50
-    max: 100
-  use_upscale: [true, false]
+    enabled: [true, false]
+    size:
+      min: 50
+      max: 100
   upscale:
+    enabled: [true, false]
     min: 1.0
     max: 2.0
-  upscale_mode: ['cubic', 'bilinear', 'nearest']
+    mode: ["cubic", "bilinear", "nearest"]
 
-evaluation:
-  metrics: ['accuracy', 'precision', 'recall', 'f1']
+static:
+  min_budget: 10
+  max_budget: 100
+  eta: 2
+  trials_per_batch: 10
+  number_of_runs: 10
+  direction: "minimize"
+  num_classes: 6
+  train_data: "data/X_train.npy"
+  train_labels: "data/Y_train.npy"
+  test_data: "data/X_test.npy"
+  test_labels: "data/Y_test.npy"
