--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,7 @@ pyparsing==3.0.9
 python-dateutil==2.8.2
 requests==2.28.1
 six==1.16.0
-torch==2.5.1
+torch==2.6.0
 torchsummary==1.5.1
 tqdm==4.64.1
 types-requests==2.28.11.7
@@ -22,3 +22,4 @@ types-setuptools==65.6.0.2
 types-tqdm==4.64.1
 urllib3==1.26.13
 optuna==4.2.1
+torchvision==0.21.0
